fix: bankruptcy logic fix